--- a/src/code/phishing/index.jade
+++ b/src/code/phishing/index.jade
@@ -9,4 +9,4 @@ block project-content
     .row
       .large-10.medium-12.large-offset-1.columns
         include:markdown content.md
-        a(href='/coding') ← Back to my coding
+        a(href='/code') ← Back to my code
